--- a/style.css
+++ b/style.css
@@ -1,53 +1,62 @@
- @font-face{
+@font-face {
     font-family: "SamsungOne";
     src: url(font/SamsungOne-400.ttf);
     font-weight: normal;
     font-style: normal;
- }
- @font-face{
+  }
+  @font-face {
     font-family: "Samsung";
-    src: url(font/samsungsharpsans-medium.otf);
+    src: url(Font/samsungsharpsans-medium.otf);
     font-weight: normal;
     font-style: normal;
- }
-
-*{
+  }
+  * {
     margin: 0;
     padding: 0;
     font-family: "Samsung", sans-serif;
-}
-nav{
+  }
+  
+  nav {
     position: fixed;
     z-index: 99;
-}
-nav .wrapper{
+    width: 100%;
+  }
+  
+  nav .wrapper {
     position: relative;
     max-width: 1300px;
-    padding: 0 30px;
+    padding: 0px 30px;
     height: 80px;
     line-height: 70px;
     margin: auto;
     display: flex;
     align-items: center;
-    justify-content: space-between
-}
-.logo{
-    padding: 20px 0 0 0 ;
-}
-.wrapper .nav-links{
+    justify-content: space-between;
+  }
+  
+  .logo {
+    padding: 20px 0 0 0;
+  }
+  .wrapper .nav-links {
     display: inline-flex;
-}
-
-.nav-links li {
+  }
+  .nav-links li {
     list-style: none;
-}
-
-.nav-links li a{
+  }
+  
+  .nav-links li a {
     color: #000;
     text-decoration: none;
     font-size: 15px;
     font-weight: 700;
     padding: 5.5px 13px;
+    margin: 0 10px 0 0;
+    border-radius: 20px;
+    transition: all 0.5s ease;
     font-family: "SamsungOne";
-
-}
+  }
+  
+  .nav-links li a:hover {
+    background: #000;
+    color: #fff;
+  }
