--- a/style.css
+++ b/style.css
@@ -60,3 +60,76 @@
     background: #000;
     color: #fff;
   }
+  .container {
+    width: 100%;
+    position: relative;
+    height: 100vh;
+  }
+  
+  .content h1 {
+    color: #fff;
+    font-size: 60px;
+    position: absolute;
+    top: 45%;
+    left: 5%;
+  }
+  .content h4 {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 400;
+    position: absolute;
+    top: 58%;
+    left: 5%;
+    margin-left: 10px;
+    font-family: "SamsungOne", arial, sans-serif;
+  }
+  
+  .btn1 {
+    color: #fff;
+    font-weight: 400;
+    font-size: 16.5px;
+    position: absolute;
+    top: 68%;
+    left: 6%;
+    cursor: pointer;
+    font-family: "SamsungOne", arial, sans-serif;
+  }
+  
+  .btn1::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 0.125rem;
+    left: 0;
+    bottom: -5px;
+    background-color: #fff;
+  }
+  
+  .btn2 {
+    color: #000;
+    background-color: #fff;
+    font-weight: 800;
+    border-radius: 20px;
+    font-size: 13.5px;
+    position: absolute;
+    top: 67%;
+    left: 13%;
+    cursor: pointer;
+    padding: 12px 22px;
+    transition: all 0.5s;
+    font-family: "SamsungOne", arial, sans-serif;
+  }
+  .btn2:hover {
+    background-color: #e9e9e9;
+  }
+
+  .background-clip{
+    position: absolute;
+    /* Define Height & width on the basis of your video */
+    height: 85%;
+    width: 97.5%;
+    object-fit: cover;
+    left: 1.2%;
+    top: 13%;
+  }
+  
